--- a/gb/25/9/12/n14593479.md
+++ b/gb/25/9/12/n14593479.md
@@ -35,12 +35,12 @@
 <p>在经济压力与刑事司法改革争论的背景下，“砸店抢劫”事件在加州频繁发生，主要针对珠宝店和零售商。虽然加州《36号提案》的初衷是加重对累犯的刑罚，但在实施过程中仍遭遇挑战，主要问题是各县缺乏充足资金支持。◇</p>
 <p>责任编辑：方平</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/25/n14377822.md#1">抢劫特勤局特工 加州男子被判29年监禁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14385564.md#1">英国摇滚乐队刚抵达加州就遭持枪抢劫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/3/n14473601.md#1">参与抢劫260万美元珠宝 加州男子获刑7年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/10/n14591186.md#1">光天化日下 15蒙面人抢劫加州珠宝店</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/26/n9772848.md#1" target="_blank">刘晓：救了毛一命的延安保卫处长凄惨下场</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/16/n10718504.md#1" target="_blank">这些患绝症的精英们何以逢生（4）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/27/n10175949.md#1" target="_blank">袁斌：中共一波又一波的残忍内斗</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/11/n11178933.md#1" target="_blank">亚利桑那媒体：中共强摘器官对美国有何影响</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
