--- a/gb/25/10/30/n14626375.md
+++ b/gb/25/10/30/n14626375.md
@@ -5,7 +5,7 @@
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/05/id14514040-EpochImages-3044174832-xl-600x400.jpg" />
 <h6>华盛顿DC的美国证券交易委员会大楼。（Madalina Vasiliu／英文大纪元）</h6>
 <hr>
-	<p>【大纪元2025年10月30日讯】（大纪元记者Kimberly Hayek撰文／王君宜编译）美国一家重要电信服务公司“Ribbon通讯公司”（Ribbon Communications）周三（10月30日）证实，其内部网络遭“国家级黑客”长期渗透，入侵行为持续近一年才被发现。这家总部位于德州的电信技术供应商暴露的系统安全问题，反映了针对电信公司的更广泛黑客攻击趋势。</p>
+	<p>【大纪元2025年10月30日讯】（大纪元记者Kimberly Hayek撰文／王君宜编译）总部位于美国德州的电信技术供应商“Ribbon通讯公司”（Ribbon Communications）周三（10月30日）证实，其内部网络遭“国家级黑客”长期渗透，入侵行为持续近一年才被发现。此事件凸显，随着针对电信产业的网络攻击持续增加，关键基础设施正面临日益严峻的安全挑战。</p>
 <p>该公司于10月23日向美国证券交易委员会（SEC）提交季度报告，承认此事件构成“重大网络安全风险”，但未披露具体损失规模。</p>
 <p>根据报告，Ribbon通讯在9月初发现异常活动，初步调查显示，黑客最早于2024年12月渗入系统。公司指出，相关行动被认为与外国政府有关，但文件未具体说明涉事国家或黑客身份。</p>
 <p>Ribbon通讯发言人在电子邮件声明中表示，目前尚无证据显示公司“重要资讯”遭窃。报告显示，黑客曾存取“主网络之外两台笔记本电脑上的少量客户文件”。发言人拒绝透露文件具体内容，仅称涉及“四份旧文件”，并确认部分小型客户受到影响。</p>
@@ -21,33 +21,33 @@
 <p><em>原文“<ahref="https://www.theepochtimes.com/us/texas-telecom-company-discloses-cybersecurity-breach-by-nation-state-hacker-5937061">Texas Telecom Company Discloses Cybersecurity Breach by Nation-State Hacker</a>”刊登于英文《大纪元时报》</em></p>
 <p>责任编辑：李琳#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/5/n14384831.md#1">澳洲高度警戒中共黑客组织“盐台风”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388013.md#1">美安全机构将向众议员说明“盐台风”事件</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388484.md#1">美众院听取盐台风黑客入侵简报 议长：震惊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533777.md#1">消息：Viasat曾遭中共黑客“盐台风”入侵</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/26/n2976689.md#1" target="_blank">鲜为人知的马克思之六：信神的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/10/n11246440.md#1" target="_blank">中国维权律师彭永峰修炼法轮功 见证神奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/25/n10666303.md#1" target="_blank">观雨堂主：大陆高校的“秘密信息员”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/3/29/n2063491.md#1" target="_blank">法轮功为什么要去中南海</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622152.md#1">科学家濒死7秒经历神奇事件 颠覆人生认知</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14621835.md#1">【未解之谜】史前巨石隐藏的真相：硅基文明曾经存在过？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/11/n14614307.md#1">汉朝丞相公孙弘：海边放猪户扭转人生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/1/n13836621.md#1">九九重阳名从何来 称心快意的佳节风俗有哪些？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369807.md#1">【品读唐诗】以山水悟禅的题寺诗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/29/n14625813.md#1">【直播】海格塞斯与日本防卫大臣新闻发布会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/29/n14625852.md#1">【新闻大破解】川习会前中共跪了 设局谋台？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/29/n14625891.md#1">【直播】美政府停摆29天 两党分别举行记者会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14623914.md#1">从女星到画家 张富美用坚韧培养博士女儿出嫁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624194.md#1">金价暴跌 山东金店：金条卖不动了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/20/n14620343.md#1">冬季将大幅降价的八款豪华SUV 含凌志畅销车</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624205.md#1">谢沛恩接受外籍男友求婚 感慨10月爱与泪交织</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624513.md#1">刘亦菲走秀中途珠宝手链脱落 临场反应获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624560.md#1">刘嘉玲参加综艺节目 梁朝伟罕见隔空放闪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/28/n14625357.md#1">陈坤新片《旁观者》撤档 预售票房不足4万元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624583.md#1">港星许绍雄惊传病危 众多艺人赶赴医院探望</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624081.md#1">为什么你最好不要使用旅馆的吹风机？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/28/n14624815.md#1">任何人都可能中风 专家教你辨识迹象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/28/n14624686.md#1">为何南瓜可以长成上千公斤重的巨无霸？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624186.md#1">想太多会让你感到压力很大 如何解脱？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/28/n14625183.md#1">亚马逊美妆季｜限时折扣精选高评价保养与彩妆好物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651278.md#1">【新闻大家谈】美国家安全战略 把台湾推向高处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651306.md#1">【军事情报局】普京拒绝和平 乌军还在红军村</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651357.md#1">【音乐】《芬兰颂》作品第26号｜2023神韵交响乐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650097.md#1">花滑大奖赛总决赛 华裔天才少女一举夺冠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649781.md#1">陈梦晒与黄晓明合照 已签约表哥公司成为艺人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649845.md#1">研究人员找到让你吃泡菜的另一个理由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646630.md#1">简单五步骤 自己也能迅速装上被套</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/10/30/n14626375.htm">美国一重要电信供应商遭国家级黑客入侵</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/10/30/n14626375.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
