--- a/gb/25/3/20/n14463104.md
+++ b/gb/25/3/20/n14463104.md
@@ -6,40 +6,38 @@
 <h6>美国签证示意图。(Shutterstock)</h6>
 <hr>
 	<p>【大纪元2025年03月20日讯】（大纪元记者宋唐、易如采访报导）川普总统上任以来，移民政策一直处于核心位置，并由最开始驱逐南部边境的非法移民，演变到如今驱逐一些虽然持有合法学生签证或绿卡、但支持外国势力及恐怖主义的学生学者。</p>
-<p>在这种情况下，中国留学生和移民难免担心，川普政府加强移民执法，是否会影响到自己的签证或身份。
-</p>
+<p>在这种情况下，中国留学生和移民难免担心，川普政府加强移民执法，是否会影响到自己的签证或身份。</p>
 <h2><strong>建立快速通道 </strong><strong>驱逐支持恐怖主义者</strong></h2>
-<p>
-3月初，哥伦比亚大学学生马哈茂德?哈利勒（Mahmoud Khalil），因组织领导校园内反以色列抗议活动被捕，并面临驱逐出境，绿卡被取消。</p>
+<p>3月初，哥伦比亚大学学生马哈茂德?哈利勒（Mahmoud Khalil），因组织领导校园内反以色列抗议活动被捕，并面临驱逐出境，绿卡被取消。</p>
 <p>另一名印度博士生兰贾尼?斯里尼瓦桑（Ranjani Srinivasan），因支持哈马斯的活动，签证也在3月5日被撤销，随后自愿离境。</p>
 <p>3月16日，一名持有效美国工作签证及法庭暂免驱逐令的黎巴嫩医生，因为手机中发现了同情真主党重要人物的“照片和视频”，被驱逐出美国境外。</p>
 <p>上述三个案例中，尤其是第一例已经引起了广泛关注。美国国务卿卢比奥依据的是1952年《移民与国民法》中的一项条款，该条款赋予国务卿有权驱逐任何对美国造成严重伤害的在美居住的外国人。</p>
 <p>但此项法律条款很少被执行，尤其是驱逐绿卡持有者几乎没有先例。</p>
-<figure id="attachment_14455736" aria-describedby="caption-attachment-14455736" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/03/id14455736-GettyImages-2203805690.jpg" rel="nofollow"><img decoding="async" class="size-medium_vertical wp-image-14455736" src="https://i.epochtimes.com/assets/uploads/2025/03/id14455736-GettyImages-2203805690-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14455736" class="wp-caption-text">2025年3月10日，美国国务卿卢比奥在飞往沙特吉达的军用飞机上接受媒体采访。他将率领代表团，于3月11日与乌克兰官员举行会谈。 (Saul Loeb/POOL/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_14455736" aria-describedby="caption-attachment-14455736" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/03/id14455736-GettyImages-2203805690.jpg" rel="nofollow"><img decoding="async" class="size-medium_vertical wp-image-14455736" src="https://i.epochtimes.com/assets/uploads/2025/03/id14455736-GettyImages-2203805690-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14455736" class="wp-caption-text">2025年3月10日，美国国务卿卢比奥在飞往沙特吉达的军用飞机上接受媒体采访。他将率领代表团，于3月11日与乌克兰官员举行会谈。 (Saul Loeb/POOL/AFP via Getty Images)</figcaption></figure>
 <p>跨太平洋律师集团公司刘俊律师对大纪元表示，他在美国生活了35年了，这种现象是非常罕见的。</p>
 <p>“因为参加游行示威支持巴勒斯坦、支持反以色列，支持或反对其它政府，而被抓被取消绿卡，之前我从来没有听说过这种案子。”他说，“我想川普政府的立场非常清楚，可以说是史无前例的。”</p>
 <p>美国政府重新激活几十年前的法律，并加大执法力度，快速将这些被视为危害美国利益的移民驱逐出境，也引起了法律纠纷。</p>
 <p>刘俊律师认为，一般在美国，要取消一个人的绿卡或公民身份，都要有法律程序，川普政府有没有根据法律程序走这个过程呢？这是一个问题。“我说的意思是，这有点不寻常。”</p>
 <p>艾飞力阿尔法事务所的艾飞力（Felipe Alexandre）律师对大纪元表示，与中东有关系的案子，现在非常敏感。川普政府动用了比较旧的法律，只要卢比奥国务卿写一封信说这个人对美国会带来很多危害，就足够递解出境了。</p>
 <p>艾飞力认为，一般情况下，如果一个外国人在美国有学生签证、H1B签证或绿卡，如果美国政府怀疑他是恐怖分子，会给美国带来危害，通常会有一个司法过程。会给一个移民法院出庭通知（NTA），放在递解出境程序里面，让他有机会见到法官，说服法官为什么有权利留在美国。</p>
-<p>“这个案子一定会去联邦法院、甚至是最高法院。”他说。
+<p>“这个案子一定会去联邦法院、甚至是最高法院。”他说。</p>
 <h2><strong>改变游戏规则</strong></h2>
-美国国务卿卢比奥在评论哈利勒一案时表示，对哈利勒采取的行动不是言论自由问题。“这事关那些一开始就没有权利在美国的人，学生签证不是任何人的权利。顺便说，绿卡也不是任何人的权利。”</p>
+<p>美国国务卿卢比奥在评论哈利勒一案时表示，对哈利勒采取的行动不是言论自由问题。“这事关那些一开始就没有权利在美国的人，学生签证不是任何人的权利。顺便说，绿卡也不是任何人的权利。”</p>
 <p>3月16日，卢比奥在接受CBS采访时还说，我们每天都在批准撤销签证，如果该签证导致获得绿卡，那么绿卡流程也是如此。</p>
 <p>这回应了川普总统1月20日发布的一项行政命令，该命令要求确定拜登政府时期，有多少不应该进入美国的外国人获准进入美国，确保这些人都接受最大程度的审查和筛查。</p>
 <p>为了配合这一行动，卢比奥还启动了一项由AI推动的“捕获并吊销”（Catch and Revoke）行动，利用AI审查数万名学生签证持有者的社交媒体账户，取消那些支持哈马斯或其它指定恐怖组织的外国人的签证。</p>
 <p>Axios报导，美国国务院正在与司法部和国土安全部合作，一位高级国务院官员称之为“全政府和全权力方式”。</p>
 <p>这标志着美国政府对外国人行为和言论的监管力度急剧上升。</p>
-<figure id="attachment_14457420" aria-describedby="caption-attachment-14457420" style="width: 574px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/03/id14457420-000_943637.jpg" rel="nofollow"><img decoding="async" class="size-medium_vertical wp-image-14457420" src="https://i.epochtimes.com/assets/uploads/2025/03/id14457420-000_943637-574x400.jpg" alt="" width="574" b="400"></a><figcaption id="caption-attachment-14457420" class="wp-caption-text">卢比奥启动了一项由AI推动的“捕获并吊销”（Catch and Revoke）行动，利用AI审查数万名学生签证持有者的社交媒体账户。(Chris Delmas/AFP)</figcaption></figure>
+<figure id="attachment_14457420" aria-describedby="caption-attachment-14457420" style="width: 574px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/03/id14457420-000_943637.jpg" rel="nofollow"><img decoding="async" class="size-medium_vertical wp-image-14457420" src="https://i.epochtimes.com/assets/uploads/2025/03/id14457420-000_943637-574x400.jpg" alt="" width="574" b="400" /></a><figcaption id="caption-attachment-14457420" class="wp-caption-text">卢比奥启动了一项由AI推动的“捕获并吊销”（Catch and Revoke）行动，利用AI审查数万名学生签证持有者的社交媒体账户。(Chris Delmas/AFP)</figcaption></figure>
 <p>中国民主党全委会执行长陈闯创律师对大纪元表示，第一修正案确实没有说只有美国公民才拥有言论自由权。但美国政府认为某人言论涉嫌支持恐怖主义，国务院有权吊销签证，这也是移民法中完全赋予的权利，完全是本国的主权。</p>
 <p>他补充说，外国人申请进入美国时，美国领事官员有权利调查你进入美国是否会从事不利于美国利益及安全的行为。签证官吊销或拒绝签证，不受司法审核，甚至总统都没办法撤销。</p>
 <p>“尽管美国行政机构现实中极少使用这个权利，但不代表说这种做法违反了法律。”</p>
 <p>川普政府似乎也正在改变以往的行为规则，避免非法或合法的外国人利用美国言论自由和司法体系的保护，在美国支持外国势力，同时又能在漫长的司法过程中仍留在美国。</p>
 <p>除了启动1952年《移民与国民法》条款外，3月15日，另一项1798年颁布的《敌国侨民法》（Aliens Enemies Act）也被激活，用于驱逐委内瑞拉犯罪组织“阿拉瓜列车帮”（Tren de Aragua）成员，该法允许非公民在未接受移民或联邦法院法官审判的情况下被驱逐出境。</p>
 <p>艾飞力律师表示，如果想剥夺一个人的身份，特别是绿卡持有者，必须要首先走正当程序（Due Process），给他一个保释和辩护的机会，法官判决后，就可以剥夺。</p>
-<p>艾飞力认为，川普政府想走捷径（shortcut），想避免很多程序。
+<p>艾飞力认为，川普政府想走捷径（shortcut），想避免很多程序。</p>
 <h2><strong>或延及在美支持中共者？</strong></h2>
-尽管目前川普政府的焦点是支持哈马斯恐怖主义者，但一些线索也表明，中国移民及可能的中共支持者也在视线之内。</p>
+<p>尽管目前川普政府的焦点是支持哈马斯恐怖主义者，但一些线索也表明，中国移民及可能的中共支持者也在视线之内。</p>
 <p>纽约法拉盛一个移民律师事务所对大纪元透露，今年偷渡入境的3个福建人，3月16日凌晨被快速遣返，连面谈的机会都不给，不签字也照样被扔上飞机，直接送到了北京。</p>
 <p>3月18日，美国驻华使领馆在X平台上发帖：美国签证在签发之后，依然会有签证审查。我们会持续不断地对签证持有者进行核查，确保他们遵守所有美国法律和移民规定——如果他们不遵守这些法律和规定，我们会吊销他们的签证并将他们驱逐出境。</p>
 <p>陈闯创表示，目前美国的移民法中限制加入极权主义政党的人来美国，不能给他们发签证和绿卡，除非是家属或其他特殊例外。但这个法律并没有得到严格执行。</p>
@@ -48,16 +46,16 @@
 <p>权利运动义工王维对大纪元表示，他自己曾在2023年11月在旧金山举行APEC的峰会上，受到中国留学生小粉红的攻击，但攻击只是语言层面上的。</p>
 <p>他对那些留学生说，你们忘记当时中国国内疫情封控期间，共产党是怎么猪狗一样对待你们的？他们就不吭声了，他们没有什么攻击力。</p>
 <p>王维表示，疫情是个很大的转折点，疫情后美国政府对华态度整体转变了，有很多中共的代理人被美国政府起诉，中共的支持者再也没大规模地招摇撞骗了，小粉红留学生都收敛了很多。</p>
-<figure id="attachment_14248283" aria-describedby="caption-attachment-14248283" style="width: 572px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14248283-GettyImages-1201130868.jpg" rel="nofollow"><img decoding="async" class="size-medium_vertical wp-image-14248283" src="https://i.epochtimes.com/assets/uploads/2024/05/id14248283-GettyImages-1201130868-572x400.jpg" alt="" width="572" b="400"></a><figcaption id="caption-attachment-14248283" class="wp-caption-text">2020年2月15日，加州韦斯特伍德，中国留学生和他们的支持者，在加州大学洛杉矶分校校园外举行悼念李文亮医生的活动。李文亮是最初对COVID-19病毒进行公开示警的武汉医生之一。 (Mark Ralston/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_14248283" aria-describedby="caption-attachment-14248283" style="width: 572px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14248283-GettyImages-1201130868.jpg" rel="nofollow"><img decoding="async" class="size-medium_vertical wp-image-14248283" src="https://i.epochtimes.com/assets/uploads/2024/05/id14248283-GettyImages-1201130868-572x400.jpg" alt="" width="572" b="400" /></a><figcaption id="caption-attachment-14248283" class="wp-caption-text">2020年2月15日，加州韦斯特伍德，中国留学生和他们的支持者，在加州大学洛杉矶分校校园外举行悼念李文亮医生的活动。李文亮是最初对COVID-19病毒进行公开示警的武汉医生之一。 (Mark Ralston/AFP via Getty Images)</figcaption></figure>
 <p>留美学生陈婷（化名）对大纪元表示，确实感觉疫情之后，留学生群体对中共的态度有了一些变化。过去可能有些人会比较激进地盲目地支持官方立场，但现在越来越多人会更理性地看待问题，更愿意听取不同的声音。</p>
 <p>“不过这也因人而异，不是所有人都会有相同的态度。”她说。</p>
 <p>另一方面，中共代理人针对法轮功群体和神韵的跨国镇压却不断升级，2月20日，神韵在华盛顿肯尼迪中心演出期间，收到炸弹威胁邮件。</p>
 <p>刘俊律师表示，炸弹威胁邮件威胁神韵演出，毫无疑问就是恐怖行为了。</p>
 <p>他指出，没有任何国家的法律会允许这种事情存在，不仅会取消签证，还会承担刑事责任，会面临很长的徒刑。凡是参加那些恐怖活动的人，都是应该被绳之以法。</p>
 <p>艾飞力律师表示，对肯尼迪中心进行炸弹邮件威胁的人，完全可以被逮捕。因为这是危害公共安全的行为，造成很多人非常大的恐惧，也影响了演出，大家都花了很多钱。</p>
-<p>“这种行为是一种恐怖行为。不管是否开玩笑，都是完全可以被起诉的行为。”他说，像情报机构NSA（美国国家安全局），他们应该有办法去查到。
+<p>“这种行为是一种恐怖行为。不管是否开玩笑，都是完全可以被起诉的行为。”他说，像情报机构NSA（美国国家安全局），他们应该有办法去查到。</p>
 <h2><strong>中国留学生该怎么办？</strong></h2>
-在川普政府严查签证与绿卡的同时，一项专门针对中国留学生的立法提案正在推进。</p>
+<p>在川普政府严查签证与绿卡的同时，一项专门针对中国留学生的立法提案正在推进。</p>
 <p>3月14日，美众院共和党人摩尔议员提案《阻止中共签证法》，推动禁止中国公民获美国学生签证。摩尔最近一直在警告，中共正在利用美国留学签证计划往美国输送间谍。</p>
 <p>摩尔议员称，国会必须采取行动，应对“中国（中共）滥用我们的学生签证项目”的问题，“是时候关掉阀门，立即禁止向中国公民发放所有学生签证”。</p>
 <p>陈婷表示，刚听到消息的时候，确实会感到焦虑，尤其是担心签证和出入境受到影响。但更多是在等待政策的进一步细节。之前也有类似的政策担忧，但最终大多数人的签证和学习计划都没有受太大影响。</p>
@@ -67,7 +65,7 @@
 <p>王维表示，中国留学生分两部分，一部分是那些既得利益者的子女在美国留学，不用问很多都是小粉红，即使能明白普世价值，他们能做的最好就是不嚷嚷，享受就行了；另一部分是穷留学生，他们成绩不错，但父母是中产阶层，很想让孩子到自由世界学点知识，最好能留在这儿。他们中很多是非常向往美国的价值观，认同普世价值，他们想留在美国。</p>
 <p>王维表示，清醒的人现在越来越多了，尤其是经济条件不太好的。因为穷则思变，在美国这儿信息比较自由，他们总有一天会明白。</p>
 <p>“我知道有几个留学生申请庇护，他们在美国上的学校非常不错，留学过程中或留学结束，直接就留下来庇护了，也不回国了，成为坚定的反共者。”他说，只要是真心地反对共产党，在美国都可以留下来。</p>
-<figure id="attachment_14009938" aria-describedby="caption-attachment-14009938" style="width: 598px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14009938-DSC_0060.jpg" rel="nofollow"><img decoding="async" class="size-medium_vertical wp-image-14009938" src="https://i.epochtimes.com/assets/uploads/2023/06/id14009938-DSC_0060-598x400.jpg" alt="" width="598" b="400"></a><figcaption id="caption-attachment-14009938" class="wp-caption-text">2023年6月3日晚，90后中国留学生Maple谴责中共暴行。（伊铃／大纪元）</figcaption></figure>
+<figure id="attachment_14009938" aria-describedby="caption-attachment-14009938" style="width: 598px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/06/id14009938-DSC_0060.jpg" rel="nofollow"><img decoding="async" class="size-medium_vertical wp-image-14009938" src="https://i.epochtimes.com/assets/uploads/2023/06/id14009938-DSC_0060-598x400.jpg" alt="" width="598" b="400" /></a><figcaption id="caption-attachment-14009938" class="wp-caption-text">2023年6月3日晚，90后中国留学生Maple谴责中共暴行。（伊铃／大纪元）</figcaption></figure>
 <p>尽管《阻止中共签证法》可能不会通过，但中国留学生获得美签可能变得更加困难。</p>
 <p>陈闯创表示，美国政府现在有收紧的趋势，这是很清楚的。上个月就有一个名牌大学的中国留学生，他已经有签证，在中国已经审查时间很久了，但在边境口岸入境的时候，仍然被审查，撤销了他的签证，让他回到中国重新申请。</p>
 <p>他说，不管是国务院还是CBP（美国移民及海关执法局），在严格对于中国的中国籍学生来美国留学的这个趋势，是非常明显的，证据也有，所以将来肯定会更加严格。</p>
@@ -75,12 +73,12 @@
 <p>“事实上，从川普第一任期到拜登，中国留学生申请来美签证的困难度慢慢在增高。”他说。◇</p>
 <p>责任编辑：林妍#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651973.md#1">佛州将两个穆斯林组织指定为恐怖组织</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651974.md#1">【直播】德桑蒂斯在佛罗里达国际大学发表演讲</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651938.md#1">美国务院官员：1月以来已吊销8.5万个签证</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/10/n10043633.md#1" target="_blank">叶光庭：共产党把我从“左派”改造成“右派”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/8/n11370721.md#1" target="_blank">爱德华?斯考特: 对迫害善良的一个政治上的回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/23/n10242561.md#1" target="_blank">袁斌：方志敏的“清贫”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/11/1/21/n3149437.md#1" target="_blank">追查国际关于天安门自焚伪案十年说明</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
